--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="keywords" content="e.hub, ehub, ehubbd, coaching">
-	<meta name="description" content="e.hub">
-    <meta name="author" content="e.hub">
+	<meta name="keywords" content="asef">
+	<meta name="description" content="asef">
+    <meta name="author" content="asef">
     
-    <title>e.hub Server</title>
+    <title>Asef Jamil Ajwad</title>
     
     <link rel="icon" href="/Favicon.png" type="image/png" sizes="16x16">
 	<link rel="stylesheet" type="text/css" href="css/util.css">
