--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -79,7 +79,7 @@
             <i class="fa-solid fa-circle-plus fa-xl" onclick="increaseSize()"></i>
         </div>
         <div class="row-wrapper">
-            <i class="fa-brands fa-github fa-2xl"></i>
+            <a href="https://github.com/X10KND/N-Puzzle"><i class="fa-brands fa-github fa-2xl"></i></a>
         </div>
     </div>
 </body>
@@ -161,7 +161,6 @@
         }
         return canvas;
     }
-
 
     function increaseSize() {
         if (n < maxSize) {
