--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -11,6 +11,7 @@
         html,
         body {
             overscroll-behavior-y: contain;
+            overflow: hidden;
             height: 100%;
         }
         body {
