--- a/desmos/pixelart/index.html
+++ b/desmos/pixelart/index.html
@@ -7,10 +7,13 @@
     <script src="https://www.desmos.com/api/v1.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
 </head>
 <body>
+    <a href="https://x10knd.github.io/desmos/pixelart/example/">Download example images</a>
+    <br>
+    <h2>Upload an image (wait for the JS to process)</h2>
     <input type='file' />
     <img id="myImg" src="#", style="width:32px">
     <canvas id="myCanvas" width="32px" height="32px"></canvas>
-    <div id="calculator" style="width: 600px; height: 600px;"></div>
+    <div id="calculator" style="width: 400px; height: 400px;"></div>
 </body>
 
 <script type="text/javascript">
