--- a/desmos/pixelart/index.html
+++ b/desmos/pixelart/index.html
@@ -60,9 +60,9 @@
                     }
                     calculator.setMathBounds({
                       left: -1,
-                      right: img.width + 1,
+                      right: Math.max(img.width, img.height) + 1,
                       bottom: -1,
-                      top: img.height + 1
+                      top: Math.max(img.width, img.height) + 1
                     });
                 }
                 img.src = URL.createObjectURL(this.files[0]);      
