--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>X10KND</title>
-      <script type="module" crossorigin src="/assets/main-Cu6I6CEY.js"></script>
-      <link rel="stylesheet" crossorigin href="/assets/main-BZOmeGKW.css">
+      <script type="module" crossorigin src="/assets/main-CzQnrdmc.js"></script>
+      <link rel="stylesheet" crossorigin href="/assets/main-BbYgwxWh.css">
     </head>
     <body>
         <div id="root"></div>
