--- a/linkcleaner/index.html
+++ b/linkcleaner/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Link Cleaner - Dark Mode</title>
+    <title>Link Cleaner</title>
     <style>
       :root {
-        /* Dark Mode Palette */
         --bg-color: #060817;
         --card-bg: #1e293b;
         --text-primary: #f1f5f9;
